# MTH2210.py

./: pyproject.toml
.github/workflows/: ci.yml  docs.yml
MTH2210/: __init__.py
MTH2210/EDO/: euler.py  rk4.py
docs/source/: accueil.md  conf.py  edo.md  list_fct.md
docs/source/_static/: custom.css
docs/source/api/: list_fct.md
docs/source/guide/: edo.md  index.md  non_linear.md
docs/source/installation/: index.md
tests/: test_euler.py  test_rk4.py
