[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MTH2210"
version = "0.0.1"
authors = [{name = "Pierre-Yves Bouchet"},
           {name = "Alexis Montoison"},
           {name = "Antonin Paquette-Rufiange"}]
maintainers = [
  {name = "Antonin Paquette-Rufiange", email = "antonin.paquette-rufiange@polymtl.ca"}
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10",
    "numpy==2.2.2"]
    
[tool.setuptools.packages]
find = {}