[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MTH2210"
version = "0.0.1"
authors = [{name = "Pierre-Yves Bouchet"},
           {name = "Alexis Montoison"},
           {name = "Antonin Paquette-Rufiange"}]
maintainers = [
  {name = "Antonin Paquette-Rufiange", email = "antonin.paquette-rufiange@polymtl.ca"}
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.10",
    "numpy==2.2.2"]

[project.optional-dependencies]
test = ["pytest==9.0.3"]
docs = ["sphinx==9.1","myst-parser==5.0.0","pydata-sphinx-theme==0.17.0"]
dev = ["MTH2210[test,docs]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]

[tool.setuptools.packages]
find = {}